--- a/src/components/SkillsSection.css
+++ b/src/components/SkillsSection.css
@@ -45,9 +45,10 @@
 .skills-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-  gap: 20px;
+  gap: 30px;
   width: 55%;
-  margin-left: 500px;
+  margin-left: 600px;
+  margin-top: -150px;
 }
 
 .skill-card {
