--- a/src/pages/Portfolio.css
+++ b/src/pages/Portfolio.css
@@ -4,7 +4,7 @@
     text-align: center;
   }
   
-  .section-title {
+  .section-title-2 {
     font-size: 2rem;
     margin-bottom: 30px;
     color: #690B22;
