--- a/src/components/MyProcessSection.css
+++ b/src/components/MyProcessSection.css
@@ -1,6 +1,6 @@
 /* MyProcess Section CSS */
 .process-section {
-  padding: 100px 10%;
+  padding: 50px 5%;
   font-family: "Nunito", sans-serif;
   text-align: center;
   background: linear-gradient(to bottom, #ffffff, #f5f5f5);
@@ -21,6 +21,7 @@
   flex-direction: column;
   align-items: center;
   position: relative;
+  padding: 50px, 50px;
 }
 
 .process-step {
@@ -28,11 +29,11 @@
   align-items: center;
   text-align: left;
   background: rgba(255, 255, 255, 0.9);
-  padding: 20px;
+  padding: 45px;
   border-radius: 15px;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.1);
   transition: transform 0.4s ease-in-out, box-shadow 0.3s ease-in-out;
-  width: 90%;
+  width: 45%;
   max-width: 800px;
   margin-bottom: 30px;
   position: relative;
